[gd_scene load_steps=10 format=3 uid="uid://b6wpc2e3gn66m"]

[ext_resource type="Script" uid="uid://cpxm8d7nj334y" path="res://scripts/ui.gd" id="1_mg525"]
[ext_resource type="Texture2D" uid="uid://divoxubsbkhvg" path="res://sprites/icons/keyboard.png" id="2_gdt2y"]
[ext_resource type="Texture2D" uid="uid://dw30ncf30ju2o" path="res://sprites/objects/playerLife1_green.png" id="2_x4jx1"]
[ext_resource type="Texture2D" uid="uid://tungptd1dhsf" path="res://sprites/icons/powerupGreen_shield.png" id="3_yev5y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vjb58"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_toqtt"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vnjk"]
bg_color = Color(0.464821, 0.653823, 0.512829, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_4vnjk"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwahs"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_mg525")

[node name="Menu_start" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu_start"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Btn_start" type="Button" parent="Menu_start"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -22.0
offset_right = 50.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.893823, 1, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_vjb58")
text = "Start
"

[node name="TRect_tutorial" type="TextureRect" parent="Menu_start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 35.0
offset_right = 20.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Goal
Don't let invaders pass through your defensive line .
Survive as long as possible .

Key settings
[W/S/A/D/Arrows] -> Move spaceship
[Space] -> Shoot invaders
[Q] -> Activate shield"
texture = ExtResource("2_gdt2y")
expand_mode = 1

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label_score" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.5
offset_right = 60.5
offset_bottom = 45.0
grow_horizontal = 2
text = "Score: 0"
label_settings = SubResource("LabelSettings_toqtt")
horizontal_alignment = 1

[node name="HBox_HPs" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -135.0
offset_top = 6.0
offset_right = -5.0
offset_bottom = 46.0
grow_horizontal = 0
theme_override_constants/separation = 5

[node name="HP_1" type="TextureRect" parent="HUD/HBox_HPs"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_x4jx1")

[node name="HP_2" type="TextureRect" parent="HUD/HBox_HPs"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_x4jx1")

[node name="HP_3" type="TextureRect" parent="HUD/HBox_HPs"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_x4jx1")

[node name="TRect_shield" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
tooltip_text = "Press [Q] to get shield for 5s .
CD: 5s  ."
texture = ExtResource("3_yev5y")

[node name="TRect_tutorial" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 49.0
offset_top = 5.0
offset_right = 89.0
offset_bottom = 45.0
tooltip_text = "Goal
Don't let invaders pass through your defensive line .
Survive as long as possible .

Key settings
[W/S/A/D/Arrows] -> Move spaceship
[Space] -> Shoot invaders
[Q] -> Activate shield"
texture = ExtResource("2_gdt2y")
expand_mode = 1

[node name="Menu_gameOver" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu_gameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Panel" type="Panel" parent="Menu_gameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -99.0
offset_right = 111.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4vnjk")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu_gameOver/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.5
offset_top = -79.0
offset_right = 92.5
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label_gameOver" type="Label" parent="Menu_gameOver/Panel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_4vnjk")
horizontal_alignment = 1

[node name="Label_score" type="Label" parent="Menu_gameOver/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Score: 0"
label_settings = SubResource("LabelSettings_4vnjk")
horizontal_alignment = 1

[node name="Label_highestScore" type="Label" parent="Menu_gameOver/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Highest Score: 0"
label_settings = SubResource("LabelSettings_4vnjk")
horizontal_alignment = 1

[node name="Btn_restart" type="Button" parent="Menu_gameOver/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.893823, 1, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_iwahs")
text = "Retry
"

[connection signal="pressed" from="Menu_start/Btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="Menu_gameOver/Panel/VBoxContainer/Btn_restart" to="." method="_on_btn_restart_pressed"]
